[package]
name = "warnsum"
version = "0.1.0"
edition = "2021"
authors = ["Peter Hill <peter.hill@york.ac.uk>"]
license = "GPLv3"
description = "Summarise compiler warnings"
keywords = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0", features = ["derive"]}
anyhow = "1.0"
regex = "0.2"
lazy_static = "1.4.0"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "3.0.4"
